Menambahkan data baru
Penambahan data baru ke web

--- a/produk/produk-aec.html
+++ b/produk/produk-aec.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <title>Produk Bu Retno</title>
+    <title>Produk AEC</title>
 
     <!-- Font Google -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Ubuntu:wght@600;700&display=swap"
@@ -59,7 +59,7 @@
     <!-- List Produk -->
     <div class="produk produk-list" id="produk">
         <div class="container">
-            <h2>Produk Bu Retno</h2>
+            <h2>Produk AEC</h2>
             <div class="imageProduk"></div>
             <div class="container bungkus-produk">
                 <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -67,14 +67,12 @@
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="../img/produk/Bu Retno/Produk Bu Retno 1.png" class="img-fluid rounded"
-                                        alt="...">
+                                    <img src="../img/produk/Anika El Craft (AEC)/Produk AEC 1.jpeg"
+                                        class="img-fluid rounded" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <a href="https://goo.gl/maps/2T1QDrhxkmnKCpwT6"><button
-                                                class="btn btn-success tombol" type="button">Kunjungi</button></a>
-                                        <a href="https://wa.me/6281903798158"><button class="btn btn-success tombol"
+                                        <a href="https://wa.me/6287839732617"><button class="btn btn-success tombol"
                                                 type="button">Hubungi</button></a>
                                     </div>
                                 </div>
@@ -85,14 +83,12 @@
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="../img/produk/Bu Retno/Produk Bu Retno 2.png" class="img-fluid rounded"
-                                        alt="...">
+                                    <img src="../img/produk/Anika El Craft (AEC)/Produk AEC 2.jpeg"
+                                        class="img-fluid rounded" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <a href="https://goo.gl/maps/2T1QDrhxkmnKCpwT6"><button
-                                                class="btn btn-success tombol" type="button">Kunjungi</button></a>
-                                        <a href="https://wa.me/6281903798158"><button class="btn btn-success tombol"
+                                        <a href="https://wa.me/6287839732617"><button class="btn btn-success tombol"
                                                 type="button">Hubungi</button></a>
                                     </div>
                                 </div>
@@ -103,14 +99,12 @@
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="../img/produk/Bu Retno/Produk Bu Retno 3.png" class="img-fluid rounded"
-                                        alt="...">
+                                    <img src="../img/produk/Anika El Craft (AEC)/Produk AEC 3.jpeg"
+                                        class="img-fluid rounded" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <a href="https://goo.gl/maps/2T1QDrhxkmnKCpwT6"><button
-                                                class="btn btn-success tombol" type="button">Kunjungi</button></a>
-                                        <a href="https://wa.me/6281903798158"><button class="btn btn-success tombol"
+                                        <a href="https://wa.me/6287839732617"><button class="btn btn-success tombol"
                                                 type="button">Hubungi</button></a>
                                     </div>
                                 </div>
@@ -121,14 +115,12 @@
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="../img/produk/Bu Retno/Produk Bu Retno 4.png" class="img-fluid rounded"
-                                        alt="...">
+                                    <img src="../img/produk/Anika El Craft (AEC)/Produk AEC 4.jpeg"
+                                        class="img-fluid rounded" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <a href="https://goo.gl/maps/2T1QDrhxkmnKCpwT6"><button
-                                                class="btn btn-success tombol" type="button">Kunjungi</button></a>
-                                        <a href="https://wa.me/6281903798158"><button class="btn btn-success tombol"
+                                        <a href="https://wa.me/6287839732617"><button class="btn btn-success tombol"
                                                 type="button">Hubungi</button></a>
                                     </div>
                                 </div>
@@ -139,14 +131,12 @@
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="../img/produk/Bu Retno/Produk Bu Retno 5.png" class="img-fluid rounded"
-                                        alt="...">
+                                    <img src="../img/produk/Anika El Craft (AEC)/Produk AEC 5.jpeg"
+                                        class="img-fluid rounded" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <a href="https://goo.gl/maps/2T1QDrhxkmnKCpwT6"><button
-                                                class="btn btn-success tombol" type="button">Kunjungi</button></a>
-                                        <a href="https://wa.me/6281903798158"><button class="btn btn-success tombol"
+                                        <a href="https://wa.me/6287839732617"><button class="btn btn-success tombol"
                                                 type="button">Hubungi</button></a>
                                     </div>
                                 </div>
@@ -157,14 +147,12 @@
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="../img/produk/Bu Retno/Produk Bu Retno 6.png" class="img-fluid rounded"
-                                        alt="...">
+                                    <img src="../img/produk/Anika El Craft (AEC)/Produk AEC 6.jpeg"
+                                        class="img-fluid rounded" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <a href="https://goo.gl/maps/2T1QDrhxkmnKCpwT6"><button
-                                                class="btn btn-success tombol" type="button">Kunjungi</button></a>
-                                        <a href="https://wa.me/6281903798158"><button class="btn btn-success tombol"
+                                        <a href="https://wa.me/6287839732617"><button class="btn btn-success tombol"
                                                 type="button">Hubungi</button></a>
                                     </div>
                                 </div>
@@ -175,14 +163,12 @@
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="../img/produk/Bu Retno/Produk Bu Retno 7.png" class="img-fluid rounded"
-                                        alt="...">
+                                    <img src="../img/produk/Anika El Craft (AEC)/Produk AEC 7.jpeg"
+                                        class="img-fluid rounded" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <a href="https://goo.gl/maps/2T1QDrhxkmnKCpwT6"><button
-                                                class="btn btn-success tombol" type="button">Kunjungi</button></a>
-                                        <a href="https://wa.me/6281903798158"><button class="btn btn-success tombol"
+                                        <a href="https://wa.me/6287839732617"><button class="btn btn-success tombol"
                                                 type="button">Hubungi</button></a>
                                     </div>
                                 </div>
@@ -193,14 +179,12 @@
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="../img/produk/Bu Retno/Produk Bu Retno 8.png" class="img-fluid rounded"
-                                        alt="...">
+                                    <img src="../img/produk/Anika El Craft (AEC)/Produk AEC 8.jpeg"
+                                        class="img-fluid rounded" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <a href="https://goo.gl/maps/2T1QDrhxkmnKCpwT6"><button
-                                                class="btn btn-success tombol" type="button">Kunjungi</button></a>
-                                        <a href="https://wa.me/6281903798158"><button class="btn btn-success tombol"
+                                        <a href="https://wa.me/6287839732617"><button class="btn btn-success tombol"
                                                 type="button">Hubungi</button></a>
                                     </div>
                                 </div>
@@ -211,14 +195,12 @@
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="../img/produk/Bu Retno/Produk Bu Retno 9.png" class="img-fluid rounded"
-                                        alt="...">
+                                    <img src="../img/produk/Anika El Craft (AEC)/Produk AEC 9.jpeg"
+                                        class="img-fluid rounded" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <a href="https://goo.gl/maps/2T1QDrhxkmnKCpwT6"><button
-                                                class="btn btn-success tombol" type="button">Kunjungi</button></a>
-                                        <a href="https://wa.me/6281903798158"><button class="btn btn-success tombol"
+                                        <a href="https://wa.me/6287839732617"><button class="btn btn-success tombol"
                                                 type="button">Hubungi</button></a>
                                     </div>
                                 </div>
@@ -229,19 +211,18 @@
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="../img/produk/Bu Retno/Produk Bu Retno 10.png" class="img-fluid rounded"
-                                        alt="...">
+                                    <img src="../img/produk/Anika El Craft (AEC)/Produk AEC 10.jpeg"
+                                        class="img-fluid rounded" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <a href="https://goo.gl/maps/2T1QDrhxkmnKCpwT6"><button
-                                                class="btn btn-success tombol" type="button">Kunjungi</button></a>
-                                        <a href="https://wa.me/6281903798158"><button class="btn btn-success tombol"
+                                        <a href="https://wa.me/6287839732617"><button class="btn btn-success tombol"
                                                 type="button">Hubungi</button></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
