--- a/produk/produk-berkah-bunda.html
+++ b/produk/produk-berkah-bunda.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <title>Produk Bakery Snack and Catering</title>
+    <title>Produk Berkah Bunda</title>
 
     <!-- Font Google -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Ubuntu:wght@600;700&display=swap"
@@ -59,7 +59,7 @@
     <!-- List Produk -->
     <div class="produk produk-list" id="produk">
         <div class="container">
-            <h2>Produk Bakery Snack and Catering</h2>
+            <h2>Produk Berkah Bunda</h2>
             <div class="imageProduk"></div>
             <div class="container bungkus-produk">
                 <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -67,67 +67,42 @@
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="../img/produk/Bakery Snack & Catering/Produk BSC 1.png"
+                                    <img src="../img/produk/Berkah Bunda/Produk Berkah Bunda 1.jpeg"
                                         class="img-fluid rounded" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Kue Tar</h5>
-                                        <a href="https://wa.me/6282236672181"><button class="btn btn-success tombol"
-                                                type="button">Hubungi</button></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="container">
-                        <div class="card mb-3" style="max-width: 540px;">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="../img/produk/Bakery Snack & Catering/Produk BSC 4.png"
-                                        class="img-fluid rounded" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Chocolato Brownie</h5>
-                                        <a href="https://wa.me/6282236672181"><button class="btn btn-success tombol"
-                                                type="button">Hubungi</button></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="container">
-                        <div class="card mb-3" style="max-width: 540px;">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="../img/produk/Bakery Snack & Catering/Produk BSC 3.png"
-                                        class="img-fluid rounded" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Rollcake Alvarian</h5>
-                                        <a href="https://wa.me/6282236672181"><button class="btn btn-success tombol"
-                                                type="button">Hubungi</button></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="container">
-                        <div class="card mb-3" style="max-width: 540px;">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="../img/produk/Bakery Snack & Catering/Produk BSC 2.png"
-                                        class="img-fluid rounded" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Nasi Box</h5>
+                                        <h5 class="card-title">Kentang Kering</h5>
                                         <p class="card-text">
-                                            Harga mulai Rp 12.000
+                                            Rp 50.000
                                         </p>
-                                        <a href="https://wa.me/6282236672181"><button class="btn btn-success tombol"
+                                        <p>
+                                            Berat 500 gram.
+                                        </p>
+                                        <a href="https://wa.me/62895392109637"><button class="btn btn-success tombol"
+                                                type="button">Hubungi</button></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="../img/produk/Berkah Bunda/Produk Berkah Bunda 2.jpeg"
+                                        class="img-fluid rounded" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Kentang Kering</h5>
+                                        <p class="card-text">
+                                            Rp 50.000
+                                        </p>
+                                        <p>
+                                            Berat 500 gram.
+                                        </p>
+                                        <a href="https://wa.me/62895392109637"><button class="btn btn-success tombol"
                                                 type="button">Hubungi</button></a>
                                     </div>
                                 </div>
