--- a/produk/produk-mba-lubna.html
+++ b/produk/produk-mba-lubna.html
@@ -76,9 +76,6 @@
                                         <p class="card-text">
                                             Rp 10.000
                                         </p>
-                                        <p>
-                                            Terdapat berbagai varian seblak yang dapat menjadi pilihan untuk Anda.
-                                        </p>
                                         <a href="https://wa.me/628174103512"><button class="btn btn-success tombol"
                                                 type="button">Hubungi</button></a>
                                     </div>
@@ -99,9 +96,6 @@
                                         <p class="card-text">
                                             Harga mulai dari Rp 1.000
                                         </p>
-                                        <p>
-                                            Terdapat berbagai varian siomay yang dapat menjadi pilihan untuk Anda.
-                                        </p>
                                         <a href="https://wa.me/628174103512"><button class="btn btn-success tombol"
                                                 type="button">Hubungi</button></a>
                                     </div>
@@ -120,10 +114,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Susu Jelly</h5>
                                         <p class="card-text">
-                                            Rp 
-                                        </p>
-                                        <p>
-                                            Terdapat berbagai varian siomay yang dapat menjadi pilihan untuk Anda.
+                                            Rp 5.000/botol
                                         </p>
                                         <a href="https://wa.me/628174103512"><button class="btn btn-success tombol"
                                                 type="button">Hubungi</button></a>
