Memisahkan Produk Bu Santi
Pemisahan produk Bu Santi

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                         <div class="row row-cols-1 row-cols-md-3 g-4 laundry-category">
                             <div class="col">
                                 <div class="card h-100">
-                                    <img src="img//produk/Make Sans/Produk Laundry.png" class="card-img-top" alt="...">
+                                    <img src="img//produk/Laundry Bu Santi/Produk Laundry.png" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title"><a href="https://goo.gl/maps/WDNsMSkt9WiiRmq77">Laundry Bu Santi</a></h5>
                                         <p class="card-text">
